# rocksdb

./: .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  shell.nix
bazel/: BUILD.bazel  gen_targets.bzl
