# This is from the `rocksdb` derivation from BCR.
# -----------------------------------------------
# Source: https://github.com/bazelbuild/bazel-central-registry/blob/aeb0f3ee77d068a785335a0fa00cecb8b7c79b50/modules/rocksdb/9.11.2/MODULE.bazel
# License SPDX: Apache-2.0

module(name = "rocksdb", version = "10.5.1", compatibility_level = 0)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "liburing", version = "2.5")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "zstd", version = "1.5.7")
